--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;700;900&display=swap" rel="stylesheet">
-  <!-- <script src="https://kit.fontawesome.com/3ca83e5539.js" crossorigin="anonymous"></script> -->
-  <!-- <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
-  <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/3ca83e5539.js" crossorigin="anonymous"></script>  
 </head>
 
 <body>
